Added some styles for fluid grid on large screens, removed cssmin dev dependency, & removed unnecessary page template

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -200,6 +200,11 @@ em {
 	}
 }
 
+.flex-grid.flex-grid--fluid {
+	max-width: 2250px;
+	margin: 0 auto;
+}
+
 .grid-item--sm {
 	width: 33.3333333%;
 }
