--- a/style.css
+++ b/style.css
@@ -293,6 +293,10 @@ em {
             flex: initial;
     -webkit-flex: 0 1 auto; }
 
+.flex-grid.flex-grid--fluid {
+  max-width: 2250px;
+  margin: 0 auto; }
+
 .grid-item--sm {
   width: 33.3333333%; }
 
